--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <title>Vara: NFT portal</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Vara: NFT Portal</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
